devide files css and js

--- a/index.html
+++ b/index.html
@@ -4,70 +4,8 @@
 <meta charset="UTF-8">
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel="stylesheet" href="style.css">
 <title>Slider</title>
-<style>
-body {
-  width: 100vw;
-}
-.keyvisual {
-  position: relative;
-  width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-  overflow: hidden;
-}
-.slider {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 10000%;
-  font-size: 0;
-}
-.sliderItem {
-  display: inline-block;
-  width: 100vw;
-  max-width: 1000px;
-  height: 400px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.btn-wrapper {
-  margin-top: 20px;
-  text-align: center;
-}
-.btn {
-  display: inline-block;
-  padding: 10px;
-  color: #ccc;
-  border-radius: 5px;
-  border: 1px #ccc solid;
-  cursor: pointer;
-}
-.arrow {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 0;
-  height: 0;
-  border: 20px transparent solid;
-  cursor: pointer;
-}
-.arrow.prev {
-  left: 10px;
-  border-right-color: #fff; 
-}
-.arrow.next {
-  right: 10px;
-  border-left-color: #fff;
-}
-@media (max-width: 768px) {
-  .sliderItem {
-    height: 200px;
-  }
-}
-</style>
 </head>
 <body>
 <div class="keyvisual">
@@ -85,93 +23,6 @@ body {
   <div class="btn start">START</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script>
-$(function() {
-  var MAX_WIDTH = 1000;
-  var INTERVAL_TIME = 3000;
-  var $slider = $('.slider');
-  var $sliderItem = $('.sliderItem');
-  var $stop = $('.stop');
-  var $start = $('.start');
-  var $prev = $('.prev');
-  var $next = $('.next');
-  var touchEvent = document.ontouchstart === null ? 'touchstart' : 'click';
-  var timer;
-
-  function getStyle(option) {
-    return {
-      left: option.isNext ? ($(window).width() < MAX_WIDTH ? '-100vw' : - MAX_WIDTH) : 0,
-      transition: option.isAnimation ? 'all 0.5s' : 'initial',
-    };
-  }
-
-  function startTimer() {
-    if (timer) {
-      return;
-    }
-    timer = setInterval(function() {
-      $slider.css(getStyle({
-        isNext: true,
-        isAnimation: true,
-      }));
-    }, INTERVAL_TIME);
-  }
-
-  function stopTimer() {
-    clearInterval(timer);
-    timer = null;
-  }
-
-  function moveRight() {
-    if ($slider.not(':animated').length) {
-      stopTimer();
-      $slider.css(getStyle({
-        isNext: true,
-        isAnimation: true,
-      }));
-    }
-  }
-
-  function moveLeft() {
-    if ($slider.not(':animated').length) {
-      stopTimer();
-      $sliderItem = $('.sliderItem');
-      $slider.prepend($sliderItem.last());
-      $slider.css(getStyle({
-        isNext: true,
-        isAnimation: false,
-      }));
-      setTimeout(function() {
-        $slider.css(getStyle({
-          isNext: false,
-          isAnimation: true,
-        }));
-      }, 0);
-    }
-  }
-
-  function endTransition(e) {
-    var isNextAnimation = parseInt(e.target.style.left, 10);
-
-    $slider.css(getStyle({
-      isNext: false,
-      isAnimation: false,
-    }));
-    if (isNextAnimation) {
-      $sliderItem = $('.sliderItem');
-      $slider.append($sliderItem.first());
-    }
-    startTimer();
-  }
-
-  startTimer();
-
-  $stop.on(touchEvent, stopTimer);
-  $start.on(touchEvent, startTimer);
-  $prev.on(touchEvent, moveLeft);
-  $next.on(touchEvent, moveRight);
-  $slider.on('transitionend', endTransition);
-});
-</script>
+<script src="app.js"></script>
 </body>
 </html>
