--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="style.css">
-<title>Slider</title>
+<title>responsive-slider-sample</title>
 </head>
 <body>
 <div class="keyvisual">
